// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostLinkEmbeds - Snapshots > matches snapshot for Generic website preview embed 1`] = `
<div
  class="w-full overflow-hidden"
  data-testid="container"
>
  <a
    data-testid="generic-website-preview"
    href="https://example.com/article"
  >
    <div
      class="flex w-full max-w-full min-w-auto flex-wrap items-start gap-6 rounded-md bg-muted p-6 lg:max-w-[520px] xl:max-w-full"
      data-testid="container"
    >
      <div
        class="flex min-w-0 flex-1 flex-col gap-2"
        data-testid="container"
      >
        <span
          class="wrap-break-word"
        >
          Example Article Title
        </span>
        <div
          class="flex flex-row items-center gap-1"
          data-testid="container"
        >
          <svg
            class="shrink-0 text-muted-foreground"
            data-testid="globe-icon"
            width="13"
          />
          <span
            class="min-w-0 flex-1 overflow-hidden font-medium text-ellipsis whitespace-nowrap text-muted-foreground"
          >
            https://example.com/article
          </span>
        </div>
      </div>
      <img
        alt="Website social image"
        class="h-25 w-45 shrink-0 rounded-md object-cover object-center"
        src="https://example.com/og-image.jpg"
      />
    </div>
  </a>
</div>
`;

exports[`PostLinkEmbeds - Snapshots > matches snapshot for Twitter embed 1`] = `
<div
  class="w-full overflow-hidden"
  data-testid="container"
>
  <div
    class="mx-0 max-w-70 sm:mx-auto sm:max-w-none [&_.react-tweet-theme]:m-0! [&_.react-tweet-theme]:max-h-75 [&_.react-tweet-theme]:overflow-y-auto!"
    data-testid="twitter-container"
    data-theme="dark"
  >
    <div
      data-testid="twitter-tweet"
      data-tweet-id="20"
    >
      Mocked Tweet 
      20
    </div>
  </div>
</div>
`;

exports[`PostLinkEmbeds - Snapshots > matches snapshot for Vimeo embed 1`] = `
<div
  class="w-full overflow-hidden"
  data-testid="container"
>
  <div
    class="relative pt-[56.25%]"
    data-testid="vimeo-aspect-ratio-wrapper"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
      allowfullscreen=""
      class="rounded-md absolute top-0 left-0 h-full w-full"
      data-testid="Vimeo video player"
      height="auto"
      loading="lazy"
      sandbox="allow-scripts allow-same-origin allow-presentation allow-popups"
      src="https://player.vimeo.com/video/123456789"
      title="Vimeo video 123456789"
      width="100%"
    />
  </div>
</div>
`;

exports[`PostLinkEmbeds - Snapshots > matches snapshot for X.com embed 1`] = `
<div
  class="w-full overflow-hidden"
  data-testid="container"
>
  <div
    class="mx-0 max-w-70 sm:mx-auto sm:max-w-none [&_.react-tweet-theme]:m-0! [&_.react-tweet-theme]:max-h-75 [&_.react-tweet-theme]:overflow-y-auto!"
    data-testid="twitter-container"
    data-theme="dark"
  >
    <div
      data-testid="twitter-tweet"
      data-tweet-id="1234567890123456789"
    >
      Mocked Tweet 
      1234567890123456789
    </div>
  </div>
</div>
`;

exports[`PostLinkEmbeds - Snapshots > matches snapshot for YouTube embed 1`] = `
<div
  class="w-full overflow-hidden"
  data-testid="container"
>
  <div
    class="relative pt-[56.25%]"
    data-testid="youtube-aspect-ratio-wrapper"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
      allowfullscreen=""
      class="rounded-md absolute top-0 left-0 h-full w-full"
      data-testid="YouTube video player"
      height="auto"
      loading="lazy"
      sandbox="allow-scripts allow-same-origin allow-presentation allow-popups"
      src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ"
      title="YouTube video dQw4w9WgXcQ"
      width="100%"
    />
  </div>
</div>
`;

exports[`PostLinkEmbeds - Snapshots > matches snapshot for no embed (no URL) 1`] = `null`;
